remove display:table on .menu seems to solve the horizontal scroll bug

--- a/src/components/Menu/DynamicMenu/styles.css
+++ b/src/components/Menu/DynamicMenu/styles.css
@@ -1,7 +1,7 @@
 @import '../../../styles/timing.css';
 
 .menu {
-  display: table;
+  /*display: table;*/ /*remove horizontal scroll*/
   max-width: 100vw;
   overflow-x: hidden;
 }
